@@ -46,6 +46,7 @@ MovieJukebox 2.3 BETA
  - Fixed defect #1784 Details page's XML deleted if Jukebox Clean (-c) and HTML turned off (-h)
  - Enhancement  #1778 Add total number of titles to the XML files
  - Enhancement  #1787 Add ability to use file hash for anidb lookup
+ - Fixed defect #1788 mjb.listing.clear.UNKNOWN should clear both "UNKNOWN" and "UNDEFINED"
 
 MovieJukebox 2.2
 ----------------
